--- a/install
+++ b/install
@@ -4,6 +4,7 @@ install_pulse
 cp ~/.scripts/i3_config_manjaro ~/.i3/config
 git config --global user.email "max.l.becker@web.de"
 git config --global user.name "m3xit"
+git config --global credential.helper cache
 echo "alias sshl='ssh 192.168.178.210'" >> ~/.bashrc
 echo "alias sshu='ssh 192.168.178.200'" >> ~/.bashrc
 echo "alias sshm='ssh 192.168.178.201'" >> ~/.bashrc
