--- a/install
+++ b/install
@@ -8,3 +8,8 @@ git config --global credential.helper cache
 echo "alias sshl='ssh 192.168.178.210'" >> ~/.bashrc
 echo "alias sshu='ssh 192.168.178.200'" >> ~/.bashrc
 echo "alias sshm='ssh 192.168.178.201'" >> ~/.bashrc
+echo "auth       optional     pam_gnome_keyring.so" | sudo tee -a /etc/pam.d/login > /dev/null
+echo "session    optional     pam_gnome_keyring.so auto_start" | sudo tee -a /etc/pam.d/login > /dev/null
+sudo systemctl enable ufw
+sudo ufw enable
+sudo systemctl enable --now fstrim.timer
