--- a/install
+++ b/install
@@ -2,7 +2,7 @@ sudo pacman -Syu
 sudo pacman -S firefox playerctl mpv youtube-dl xorg-xev
 install_pulse
 cp ~/.scripts/i3_config_manjaro ~/.i3/config
-git config --global user.email "max.l.becker@web.de"
+git config --global user.email "6976764+sqanch@users.noreply.github.com"
 git config --global user.name "m3xit"
 git config --global credential.helper cache
 git config pull.rebase false
