--- a/install
+++ b/install
@@ -1,6 +1,6 @@
 #!/bin/bash
 sudo pacman -Syu
-sudo pacman -S firefox playerctl mpv youtube-dl xorg-xev fish alacritty
+sudo pacman -S firefox playerctl mpv youtube-dl xorg-xev fish alacritty rofi
 install_pulse
 cp ~/.scripts/i3_config_manjaro ~/.i3/config
 git config --global user.email "6976764+sqanch@users.noreply.github.com"
