--- a/install
+++ b/install
@@ -46,6 +46,7 @@ echo "auth       optional     pam_gnome_keyring.so" | sudo tee -a /etc/pam.d/log
 echo "session    optional     pam_gnome_keyring.so auto_start" | sudo tee -a /etc/pam.d/login > /dev/null
 # rofi
 echo "rofi"
+mkdir ~/.config/rofi
 cp ~/.scripts/config/rofi ~/.config/rofi/config
 # picom
 echo "picom"
