--- a/install
+++ b/install
@@ -29,13 +29,14 @@ echo "192.168.178.202 nextcloud.max.org" | sudo tee -a /etc/hosts
 echo "192.168.178.210 max-xps13" | sudo tee -a /etc/hosts
 echo "192.168.178.211 pi" | sudo tee -a /etc/hosts
 echo "192.168.178.212 phone" | sudo tee -a /etc/hosts
+echo "192.168.178.213 odroid" | sudo tee -a /etc/hosts
 # fish
 echo "fish"
 cp ~/.scripts/config/fish_functions/* ~/.config/fish/functions/
 # git
 echo "git"
 git config --global user.email "6976764+sqanch@users.noreply.github.com"
-git config --global user.name "m3xit"
+git config --global user.name "sqanch"
 git config --global credential.helper cache
 git config pull.rebase false
 # i3
@@ -64,6 +65,7 @@ sudo ufw allow from 192.168.178.202
 sudo ufw allow from 192.168.178.210
 sudo ufw allow from 192.168.178.211
 sudo ufw allow from 192.168.178.212
+sudo ufw allow from 192.168.178.213
 # vim
 echo "vim"
 cp ~/.scripts/config/vimrc ~/.vimrc
