--- a/install
+++ b/install
@@ -30,6 +30,9 @@ echo "192.168.178.210 max-xps13" | sudo tee -a /etc/hosts
 echo "192.168.178.211 pi" | sudo tee -a /etc/hosts
 echo "192.168.178.212 phone" | sudo tee -a /etc/hosts
 echo "192.168.178.213 odroid" | sudo tee -a /etc/hosts
+# firefox
+echo "firefox"
+echo export MOZ_USE_XINPUT2=1 | sudo tee /etc/profile.d/use-xinput2.sh
 # fish
 echo "fish"
 cp ~/.scripts/config/fish_functions/* ~/.config/fish/functions/
